corrected UI bugs that would overflow screen width

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   background: black;
+  width: 100vw;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
